<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sell_your_books" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/donate_a_book" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/request_a_book" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_orders" />
    </group>
</menu>
